--- a/online_search/src/main/resources/application-dev.properties
+++ b/online_search/src/main/resources/application-dev.properties
@@ -7,10 +7,9 @@ news.page_num=10
 video.page_num=10
 
 # elastic配置
-elastic.search.host=172.16.0.115
+elastic.search.host[0]=172.16.0.115
 elastic.search.port=9200
-elastic.search.clusterName=elasticsearch
+elastic.search.clusterName=es-cluster-zy
 elastic.search.schema=http
-elastic.index=news
 
 runner.preload=false
