--- a/online_search/src/main/resources/application-prod.properties
+++ b/online_search/src/main/resources/application-prod.properties
@@ -7,10 +7,14 @@ news.page_num=10
 video.page_num=10
 
 # elastic配置
-elastic.search.host=127.0.0.1
+elastic.search.host[0]=192.168.22.137
+elastic.search.host[1]=192.168.22.141
+elastic.search.host[2]=192.168.22.31
+elastic.search.host[3]=192.168.25.40
+elastic.search.host[4]=192.168.22.42
+elastic.search.host[5]=192.168.25.62
 elastic.search.port=9200
-elastic.search.clusterName=elasticsearch
+elastic.search.clusterName=cxy-es
 elastic.search.schema=http
-elastic.index=news_test
 
 runner.preload=false
