--- a/online_search/src/main/resources/application-prod.properties
+++ b/online_search/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 server.port=8080
 
-# 索引配置
+# search索引配置
 news.index.name=app_browser_search_news
 video.index.name=app_browser_search_videos
 news.page_num=10
